--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
+    "prop-types": "15.6.0",
     "rc-pagination": "^1.17.3",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "simditor": "2.3.6"
   }
 }
